syntax = "proto3";

package go.micro.srv.PostHousesImage;

service Example {
	rpc PostHousesImage(Request) returns (Response) {}

}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	//图片
	bytes Image = 2;
	//房屋id
	string Id = 3;
	//图片大小
	int64 FileSize = 4;
	//图片名
	string FileName = 5;
}


message Response {
	string Error = 1;
	string Errmsg = 2;
	//返回url
	string Url = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
